<?xml version="1.0"?>
<package format="3">
  <name>fadecandy_driver</name>
  <version>0.2.2</version>
  <description>ROS driver for fadecandy LED controllers</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>
  <maintainer email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <depend>diagnostic_updater</depend>
  <depend>fadecandy_msgs</depend>
  <depend>libusb-1.0-dev</depend>

  <test_depend>rclpy</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
